// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View: Component should not render any step 1`] = `
<styled.div>
  <Header
    customButtonStyles={Object {}}
    customStyles={Object {}}
    iconComponent={<MenuIcon />}
    onButtonClick={[Function]}
  >
    <H2>
      name
    </H2>
    <H1>
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.view.subTitle"
        values={Object {}}
      />
    </H1>
  </Header>
  <form
    onSubmit={[Function]}
  >
    <PillButtons
      leftButtonProps={
        Object {
          "onClick": [Function],
          "title": undefined,
        }
      }
      rightButtonProps={
        Object {
          "disabled": true,
          "onClick": [Function],
          "title": undefined,
        }
      }
    />
    <styled.div>
      <Stepper
        activeStep={0}
        customDotStyles={Object {}}
        customStyles={
          Object {
            "margin": "0 auto",
            "pointerEvents": "none",
          }
        }
        handleStep={[Function]}
        onStepChange={[Function]}
        steps={6}
      />
    </styled.div>
  </form>
</styled.div>
`;

exports[`View: Component should not render content 1`] = `<styled.div />`;

exports[`View: Component should render draft 1`] = `
<styled.div>
  <Header
    customButtonStyles={Object {}}
    customStyles={Object {}}
    iconComponent={<MenuIcon />}
    onButtonClick={[Function]}
  >
    <H2>
      <FormattedMessage
        defaultMessage="Create Data Source"
        id="dataSource.view.title"
        values={Object {}}
      />
    </H2>
    <H1>
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.view.subTitle"
        values={Object {}}
      />
    </H1>
  </Header>
  <form
    onSubmit={[Function]}
  >
    <Source
      dataSource={Object {}}
      fetchDataSource={[Function]}
      handleChange={[Function]}
      handleSubmit={[Function]}
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
            "projectId": "1",
            "step": "1",
          },
        }
      }
      onChange={[Function]}
      setFieldValue={[Function]}
      unmountDataSource={[Function]}
      values={
        Object {
          "id": "id",
          "status": "draft",
        }
      }
    />
    <PillButtons
      leftButtonProps={
        Object {
          "onClick": [Function],
          "title": undefined,
        }
      }
      rightButtonProps={
        Object {
          "disabled": true,
          "onClick": [Function],
          "title": undefined,
        }
      }
    />
    <styled.div>
      <Stepper
        activeStep={1}
        customDotStyles={Object {}}
        customStyles={
          Object {
            "margin": "0 auto",
            "pointerEvents": "none",
          }
        }
        handleStep={[Function]}
        onStepChange={[Function]}
        steps={6}
      />
    </styled.div>
  </form>
</styled.div>
`;

exports[`View: Component should render source step 1`] = `
<styled.div>
  <Header
    customButtonStyles={Object {}}
    customStyles={Object {}}
    iconComponent={<MenuIcon />}
    onButtonClick={[Function]}
  >
    <H2>
      name
    </H2>
    <H1>
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.view.subTitle"
        values={Object {}}
      />
    </H1>
  </Header>
  <form
    onSubmit={[Function]}
  >
    <Source
      dataSource={Object {}}
      fetchDataSource={[Function]}
      handleChange={[Function]}
      handleSubmit={[Function]}
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
            "projectId": "1",
            "step": "1",
          },
        }
      }
      onChange={[Function]}
      setFieldValue={[Function]}
      unmountDataSource={[Function]}
      values={
        Object {
          "id": "id",
          "name": "name",
        }
      }
    />
    <PillButtons
      leftButtonProps={
        Object {
          "onClick": [Function],
          "title": undefined,
        }
      }
      rightButtonProps={
        Object {
          "disabled": true,
          "onClick": [Function],
          "title": undefined,
        }
      }
    />
    <styled.div>
      <Stepper
        activeStep={1}
        customDotStyles={Object {}}
        customStyles={
          Object {
            "margin": "0 auto",
            "pointerEvents": "none",
          }
        }
        handleStep={[Function]}
        onStepChange={[Function]}
        steps={6}
      />
    </styled.div>
  </form>
</styled.div>
`;
